--- a/Lab2/LoginVC.xib
+++ b/Lab2/LoginVC.xib
@@ -53,7 +53,7 @@
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
-                                <action selector="Login:" destination="-1" eventType="touchUpInside" id="fH1-Q6-k5g"/>
+                                <action selector="logIn:" destination="-1" eventType="touchUpInside" id="fH1-Q6-k5g"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tLm-mq-2kO">
