--- a/Lab2/NoteViewCell.xib
+++ b/Lab2/NoteViewCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="66" id="KGk-i7-Jjw" customClass="NoteViewCell" customModule="Lab2" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="645" height="66"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="217" id="KGk-i7-Jjw" customClass="NoteViewCell" customModule="Lab2" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="651" height="217"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="645" height="65.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="651" height="216.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yfl-vj-2lc">
-                        <rect key="frame" x="16" y="8" width="586" height="21"/>
+                        <rect key="frame" x="16" y="8" width="592" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="lHb-D8-nUL"/>
                         </constraints>
@@ -34,25 +34,31 @@
                         </variation>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oji-hk-eYR">
-                        <rect key="frame" x="16" y="35" width="586" height="18"/>
+                        <rect key="frame" x="16" y="35" width="592" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DGZ-Y6-w43">
-                        <rect key="frame" x="610" y="21" width="19" height="19"/>
+                        <rect key="frame" x="616" y="99" width="19" height="19"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="19" id="4HS-xI-8Sd"/>
                             <constraint firstAttribute="width" constant="19" id="9W9-R9-3yO"/>
                         </constraints>
                         <state key="normal" title="Button" image="checked"/>
                     </button>
-                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pck-Xv-Fm5">
-                        <rect key="frame" x="0.0" y="0.0" width="8" height="66"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pck-Xv-Fm5">
+                        <rect key="frame" x="0.0" y="0.0" width="8" height="216.5"/>
                         <color key="backgroundColor" red="1" green="0.0" blue="0.024170271520000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="8" id="4yw-Nd-QHO"/>
+                            <constraint firstAttribute="height" constant="66" id="U7S-dU-hsQ"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="U7S-dU-hsQ"/>
+                            </mask>
+                        </variation>
                     </view>
                 </subviews>
                 <constraints>
@@ -63,7 +69,7 @@
                     <constraint firstItem="Yfl-vj-2lc" firstAttribute="leading" secondItem="pck-Xv-Fm5" secondAttribute="trailing" constant="8" id="Rbp-Gk-VnA"/>
                     <constraint firstItem="oji-hk-eYR" firstAttribute="leading" secondItem="pck-Xv-Fm5" secondAttribute="trailing" constant="8" id="YSP-WA-ur2"/>
                     <constraint firstItem="pck-Xv-Fm5" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="aOv-a6-pXr"/>
-                    <constraint firstAttribute="bottom" secondItem="oji-hk-eYR" secondAttribute="bottom" constant="124.5" id="f55-u1-duG"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="oji-hk-eYR" secondAttribute="bottom" constant="8" id="f55-u1-duG"/>
                     <constraint firstItem="DGZ-Y6-w43" firstAttribute="leading" secondItem="Yfl-vj-2lc" secondAttribute="trailing" constant="8" id="fYn-sN-9oF"/>
                     <constraint firstAttribute="bottom" secondItem="pck-Xv-Fm5" secondAttribute="bottom" id="haO-0R-PAU"/>
                     <constraint firstItem="oji-hk-eYR" firstAttribute="top" secondItem="Yfl-vj-2lc" secondAttribute="bottom" constant="6" id="iVS-r0-TJz"/>
@@ -71,6 +77,11 @@
                     <constraint firstItem="DGZ-Y6-w43" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="sQL-cn-hNg"/>
                     <constraint firstItem="Yfl-vj-2lc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="vq5-Fw-VE4"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="3La-hn-Dlj"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
@@ -78,7 +89,7 @@
                 <outlet property="stripeView" destination="pck-Xv-Fm5" id="OIN-sU-oIF"/>
                 <outlet property="titleLabel" destination="Yfl-vj-2lc" id="FkA-sv-wB0"/>
             </connections>
-            <point key="canvasLocation" x="51.449275362318843" y="115.17857142857142"/>
+            <point key="canvasLocation" x="47.10144927536232" y="165.73660714285714"/>
         </tableViewCell>
     </objects>
     <resources>
