--- a/Lab2/Views/TaskViewCell.xib
+++ b/Lab2/Views/TaskViewCell.xib
@@ -39,7 +39,7 @@
                         <color key="textColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DGZ-Y6-w43">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DGZ-Y6-w43" customClass="CheckBox" customModule="Lab2" customModuleProvider="target">
                         <rect key="frame" x="616" y="99" width="19" height="19"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="19" id="4HS-xI-8Sd"/>
@@ -86,6 +86,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="descriptionLabel" destination="oji-hk-eYR" id="cHN-XP-BEX"/>
+                <outlet property="doneButton" destination="DGZ-Y6-w43" id="geY-sG-Qv3"/>
                 <outlet property="stripeView" destination="pck-Xv-Fm5" id="OIN-sU-oIF"/>
                 <outlet property="titleLabel" destination="Yfl-vj-2lc" id="FkA-sv-wB0"/>
             </connections>
