--- a/Lab2/Views/TasksDetailsVC.xib
+++ b/Lab2/Views/TasksDetailsVC.xib
@@ -12,6 +12,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TasksDetailsVC" customModule="Lab2" customModuleProvider="target">
             <connections>
+                <outlet property="categoryLabel" destination="SOk-TQ-3P1" id="FpI-Uo-fSz"/>
+                <outlet property="dateLabel" destination="sq3-ua-XS3" id="2cc-SQ-xrj"/>
+                <outlet property="deadlineLabel" destination="Sd9-BT-qHW" id="acV-Dt-1Yv"/>
+                <outlet property="descriptionTextView" destination="dDJ-xC-BmX" id="sm1-gP-p4h"/>
+                <outlet property="doneLabel" destination="2Rl-FK-xM0" id="cAU-Ck-QKn"/>
+                <outlet property="editButton" destination="xku-tO-uJN" id="SCO-as-eO5"/>
+                <outlet property="priorityLabel" destination="nWK-7o-Ndt" id="BJf-kH-5N4"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,21 +27,147 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DETAILS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SDN-Zt-YXg">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oR3-eJ-59p">
+                    <rect key="frame" x="10" y="54" width="394" height="484"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sq3-ua-XS3">
+                            <rect key="frame" x="16" y="16" width="42" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Rl-FK-xM0">
+                            <rect key="frame" x="336" y="16" width="42" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dDJ-xC-BmX">
+                            <rect key="frame" x="16" y="53" width="362" height="350"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="350" id="CAc-nb-aIM"/>
+                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="500" id="rg7-e2-8Ge"/>
+                                <constraint firstAttribute="width" constant="362" id="vyB-w8-dpO"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="rg7-e2-8Ge"/>
+                                    <exclude reference="vyB-w8-dpO"/>
+                                </mask>
+                            </variation>
+                        </textView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sd9-BT-qHW">
+                            <rect key="frame" x="42" y="418" width="42" height="20"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Vector-2" translatesAutoresizingMaskIntoConstraints="NO" id="yVq-BM-l8F">
+                            <rect key="frame" x="16" y="419" width="18" height="18"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="18" id="eJQ-TU-frb"/>
+                                <constraint firstAttribute="width" constant="18" id="uC6-YC-Jex"/>
+                            </constraints>
+                        </imageView>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Vector-3" translatesAutoresizingMaskIntoConstraints="NO" id="XdV-is-bjZ">
+                            <rect key="frame" x="16" y="453" width="18" height="15"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="15" id="Cy2-jw-9BM"/>
+                                <constraint firstAttribute="width" constant="18" id="U25-FI-a8z"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOk-TQ-3P1">
+                            <rect key="frame" x="42" y="449" width="42" height="23"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nWK-7o-Ndt">
+                            <rect key="frame" x="336" y="444" width="42" height="24"/>
+                            <color key="backgroundColor" red="1" green="0.0" blue="0.024170271520000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="88" id="Xrm-ug-O6v"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="Xrm-ug-O6v"/>
+                                </mask>
+                            </variation>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="XdV-is-bjZ" secondAttribute="bottom" constant="16" id="0SH-sb-2Kd"/>
+                        <constraint firstItem="dDJ-xC-BmX" firstAttribute="leading" secondItem="oR3-eJ-59p" secondAttribute="leading" constant="16" id="4eQ-3K-3BT"/>
+                        <constraint firstItem="nWK-7o-Ndt" firstAttribute="top" secondItem="dDJ-xC-BmX" secondAttribute="bottom" constant="41" id="7HM-Cz-mQg"/>
+                        <constraint firstAttribute="trailing" secondItem="dDJ-xC-BmX" secondAttribute="trailing" constant="16" id="AM1-hR-FQG"/>
+                        <constraint firstItem="Sd9-BT-qHW" firstAttribute="top" secondItem="dDJ-xC-BmX" secondAttribute="bottom" constant="15" id="KY2-bd-why"/>
+                        <constraint firstItem="sq3-ua-XS3" firstAttribute="leading" secondItem="oR3-eJ-59p" secondAttribute="leading" constant="16" id="Kbg-Tl-A32"/>
+                        <constraint firstItem="Sd9-BT-qHW" firstAttribute="leading" secondItem="yVq-BM-l8F" secondAttribute="trailing" constant="8" id="Rk5-1b-Fgr"/>
+                        <constraint firstItem="XdV-is-bjZ" firstAttribute="top" secondItem="yVq-BM-l8F" secondAttribute="bottom" constant="16" id="TSN-hb-q8S"/>
+                        <constraint firstItem="sq3-ua-XS3" firstAttribute="top" secondItem="oR3-eJ-59p" secondAttribute="top" constant="16" id="XWg-qp-Av3"/>
+                        <constraint firstItem="2Rl-FK-xM0" firstAttribute="top" secondItem="oR3-eJ-59p" secondAttribute="top" constant="16" id="ZyA-yD-jat"/>
+                        <constraint firstAttribute="trailing" secondItem="2Rl-FK-xM0" secondAttribute="trailing" constant="16" id="bXw-3X-Xqo"/>
+                        <constraint firstItem="XdV-is-bjZ" firstAttribute="centerY" secondItem="SOk-TQ-3P1" secondAttribute="centerY" id="g1C-Ns-qC5"/>
+                        <constraint firstItem="yVq-BM-l8F" firstAttribute="top" secondItem="dDJ-xC-BmX" secondAttribute="bottom" constant="16" id="hDl-5w-BHh"/>
+                        <constraint firstItem="SOk-TQ-3P1" firstAttribute="top" secondItem="Sd9-BT-qHW" secondAttribute="bottom" constant="11" id="iAa-0e-5dF"/>
+                        <constraint firstItem="XdV-is-bjZ" firstAttribute="leading" secondItem="oR3-eJ-59p" secondAttribute="leading" constant="16" id="iHV-gq-Wbb"/>
+                        <constraint firstItem="yVq-BM-l8F" firstAttribute="centerY" secondItem="Sd9-BT-qHW" secondAttribute="centerY" id="jJM-aB-0aS"/>
+                        <constraint firstItem="dDJ-xC-BmX" firstAttribute="top" secondItem="2Rl-FK-xM0" secondAttribute="bottom" constant="16" id="m56-Zw-03b"/>
+                        <constraint firstAttribute="trailing" secondItem="nWK-7o-Ndt" secondAttribute="trailing" constant="16" id="o62-vV-GAP"/>
+                        <constraint firstAttribute="bottom" secondItem="nWK-7o-Ndt" secondAttribute="bottom" constant="16" id="ooq-0N-hLJ"/>
+                        <constraint firstItem="dDJ-xC-BmX" firstAttribute="top" secondItem="sq3-ua-XS3" secondAttribute="bottom" constant="16" id="rYm-gI-SHz"/>
+                        <constraint firstItem="SOk-TQ-3P1" firstAttribute="leading" secondItem="XdV-is-bjZ" secondAttribute="trailing" constant="8" id="szB-nB-Yfs"/>
+                        <constraint firstItem="yVq-BM-l8F" firstAttribute="leading" secondItem="oR3-eJ-59p" secondAttribute="leading" constant="16" id="yVb-D8-hTp"/>
+                    </constraints>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xku-tO-uJN">
+                    <rect key="frame" x="10" y="807" width="394" height="45"/>
+                    <color key="backgroundColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="45" id="4k9-dM-CNl"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                    <state key="normal" title="Edit">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="editTask:" destination="-1" eventType="touchUpInside" id="tNR-CK-piz"/>
+                    </connections>
+                </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="SDN-Zt-YXg" secondAttribute="bottom" id="F8h-e1-iGb"/>
-                <constraint firstItem="SDN-Zt-YXg" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="O9Z-BT-nbk"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="SDN-Zt-YXg" secondAttribute="trailing" id="fpc-BH-3nK"/>
-                <constraint firstItem="SDN-Zt-YXg" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="rbL-mT-AUO"/>
+                <constraint firstAttribute="trailing" secondItem="xku-tO-uJN" secondAttribute="trailing" constant="10" id="1He-JJ-Dyf"/>
+                <constraint firstAttribute="bottom" secondItem="oR3-eJ-59p" secondAttribute="bottom" constant="276" id="1Tc-QC-3xd"/>
+                <constraint firstItem="xku-tO-uJN" firstAttribute="top" relation="greaterThanOrEqual" secondItem="oR3-eJ-59p" secondAttribute="bottom" constant="10" id="8lD-Q8-s3b"/>
+                <constraint firstItem="oR3-eJ-59p" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="Fba-Ay-Dm7"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="xku-tO-uJN" secondAttribute="bottom" constant="10" id="NLm-wx-wfM"/>
+                <constraint firstItem="oR3-eJ-59p" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="Osj-Rc-KBx"/>
+                <constraint firstItem="xku-tO-uJN" firstAttribute="top" relation="greaterThanOrEqual" secondItem="oR3-eJ-59p" secondAttribute="bottom" constant="10" id="S9n-y6-aKw"/>
+                <constraint firstAttribute="trailing" secondItem="oR3-eJ-59p" secondAttribute="trailing" constant="10" id="d6u-S4-azv"/>
+                <constraint firstItem="xku-tO-uJN" firstAttribute="top" relation="greaterThanOrEqual" secondItem="oR3-eJ-59p" secondAttribute="bottom" constant="10" id="g1O-eE-AuN"/>
+                <constraint firstItem="xku-tO-uJN" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="s20-tK-Bhh"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="1Tc-QC-3xd"/>
+                    <exclude reference="8lD-Q8-s3b"/>
+                    <exclude reference="g1O-eE-AuN"/>
+                </mask>
+            </variation>
+            <point key="canvasLocation" x="131.8840579710145" y="102.45535714285714"/>
         </view>
     </objects>
+    <resources>
+        <image name="Vector-2" width="18" height="18"/>
+        <image name="Vector-3" width="18" height="15"/>
+    </resources>
 </document>
